2025-04-24T01:14:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14631271559 # 623
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-24
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 63 107 / 65 109
* notice: next accum: outdated-unq outdated-all / unq all: 64 108 / 65 109
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-04-09] / []

2025-04-15T01:15:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14459078656 # 614
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-15
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 63 107 / 64 108
* notice: next accum: outdated-unq outdated-all / unq all: 63 107 / 65 109
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-04-14]

2025-04-10T01:12:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14370108208 # 609
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-10
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 62 106 / 63 107
* notice: next accum: outdated-unq outdated-all / unq all: 63 107 / 64 108
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-08] / [2025-04-09]

2025-02-09T01:44:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13221209216 # 560